--- a/style.css
+++ b/style.css
@@ -1,5 +1,11 @@
 
-/* Basic Reset */
+
+.jockey-one-regular {
+    font-family: "Jockey One", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+  }  
+
 * {
     margin: 0;
     padding: 0;
