feat(final css): add final css

--- a/style.css
+++ b/style.css
@@ -9,12 +9,15 @@
 * {
     margin: 0;
     padding: 0;
+    font-family: system-ui;
+    box-sizing: border-box;
 }
 
 body {
     display: flex;
     flex-direction: row;
     height: 100vh;
+    overflow: hidden;
 }
 
 .left-section {
@@ -29,7 +32,6 @@ body {
     object-fit: cover;
 }
 
-/* Removing div from flow and formatting */
 .left-section div {
     position: absolute;
     top: 20%;
@@ -41,22 +43,116 @@ body {
     align-items: center;
     justify-content: center;
     background-color: rgba(0,0,0,0.5);
+    container-type: size;
 }
 
-
-/* Shrinking image/specifiying its width */
 .left-section div img {
     object-fit: contain;
-    flex: 0 0 125px;
-    align
+    flex: 0 0 0; /* Set to 0 so min-width is used*/
 }
 
 .left-section div h1 {
     flex: 0 0 auto;
     color: white;
+    font-size: 80cqh;
+    font-family: "Jockey One";
+}
+
+figcaption{
+    position: absolute;
+    bottom: 0%;
+    left: 0%;
+    color:rgb(92, 92, 92);
+    bottom: 1%;
+    left: 1%;
+}
+
+a{
+    color: rgb(92, 92, 92);
 }
 
 .right-section {
     flex: 0 0 60%;
     height: 100%;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 5%;
+    padding-left: 2rem;
+    background: linear-gradient(
+    to bottom,
+    #fafafa 0%,    /* almost white at top */
+    #f7f7f7 100%   /* your original light gray at bottom */
+  );
+
 }
+
+.right-section h2:first-of-type{
+    max-width: 85%;
+
+}
+
+.formBox {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    gap: 30px;
+    padding: 2rem;
+    margin-left: -2rem;
+    margin-right: -2rem;
+    background-color: #fff;              
+    border: 1px solid #ddd;                        
+    box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+}
+
+.formInputs {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: 1.5rem 2.0rem;
+}
+
+.formInputs > div {
+    flex: 0 0 40%;
+    display: flex;
+    flex-direction: column;
+    gap: 0.2rem;
+}
+
+button {
+    background-color: #C94C36;
+    color: #fff;
+    border: 1px solid #C94C36;
+    box-shadow: 0 2px 4px rgba(0,0,0,0.4);
+    border-radius: 5px;
+    padding: 13px 45px;
+    margin-top: 30px;
+    font-weight: 700;
+}
+
+.log-in {
+    color: #C94C36;
+}
+
+h2 {
+    font-weight: 600;
+    font-size: 1.3rem;
+}
+
+.formInputs div label {
+    color: rgb(92, 92, 92);
+    font-weight: bold;
+    font-size: 0.8rem;
+}
+
+.formInputs div input {
+    height: 1.5rem;
+}
+
+input[type="password"]:invalid {
+    border: 1px solid red;
+}
+
+
+
